경북대 BE_석혜원 6주차 과제 (1단계) (#204)
* refactor: add OptionController

* feat: add getting one product

* feat: add category creation and update

* rename: add packages and move files of category

* refactor: add KakaoController and modify OauthController

* feat: add option update and delete

* fix(Wish): add id column and remove composite key

* feat: add getting options by member id

* feat: include snake case JSON naming in DTOs

* fix: change list responses

* fix(Order): not to throw exception when wish does not exist

* fix: to return kakao access token when login with kakao

* feat: add request and response descriptions of swagger api docs

* refactor: separate a method to issue token

* feat: return system access token when login with kakao

* chore: add properties for dev