@@ -5,13 +5,11 @@ import gift.api.member.repository.MemberRepository;
 import gift.api.product.domain.Product;
 import gift.api.product.repository.ProductRepository;
 import gift.api.wishlist.domain.Wish;
-import gift.api.wishlist.domain.WishId;
-import gift.api.wishlist.dto.WishAddUpdateRequest;
-import gift.api.wishlist.dto.WishDeleteRequest;
+import gift.api.wishlist.dto.WishRequest;
 import gift.api.wishlist.dto.WishResponse;
 import gift.api.wishlist.repository.WishRepository;
+import gift.global.PageResponse;
 import gift.global.exception.NoSuchEntityException;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 import org.springframework.data.domain.Page;
@@ -35,36 +33,42 @@ public class WishService {
         this.wishRepository = wishRepository;
     }
 
-    public List<WishResponse> getItems(Long memberId, Pageable pageable) {
+    public PageResponse<WishResponse> getItems(Long memberId, Pageable pageable) {
         Page<Wish> wishes = wishRepository.findAllByMemberId(memberId, createPageableWithProduct(pageable));
-        if (wishes.hasContent()) {
-            return wishes.getContent()
-                    .stream()
-                    .map(WishResponse::of)
-                    .collect(Collectors.toList());
-        }
-        return Collections.emptyList();
+        List<WishResponse> contents = wishes.getContent()
+            .stream()
+            .map(WishResponse::of)
+            .toList();
+        return PageResponse.of(wishes.getPageable(), wishes.getTotalElements(),
+            wishes.getTotalPages(), contents);
     }
 
     @Transactional
-    public void add(Long memberId, WishAddUpdateRequest wishAddUpdateRequest) {
+    public void add(Long memberId, WishRequest wishRequest) {
         Member member = memberRepository.findById(memberId)
             .orElseThrow(() -> new NoSuchEntityException("member"));
-        Product product = productRepository.findById(wishAddUpdateRequest.productId())
+        Product product = productRepository.findById(wishRequest.productId())
             .orElseThrow(() -> new NoSuchEntityException("product"));
-        wishRepository.save(wishAddUpdateRequest.toEntity(member, product));
+        wishRepository.save(wishRequest.toEntity(member, product));
     }
 
+    @Deprecated
     @Transactional
-    public void update(Long memberId, WishAddUpdateRequest wishAddUpdateRequest) {
-        Wish wish = wishRepository.findById(WishId.of(memberId, wishAddUpdateRequest.productId()))
+    public void update(Long memberId, WishRequest wishRequest) {
+        Wish wish = wishRepository.findByMemberIdAndProductId(memberId, wishRequest.productId())
             .orElseThrow(() -> new NoSuchEntityException("wish"));
-        wish.updateQuantity(wishAddUpdateRequest.quantity());
+        wish.updateQuantity(wishRequest.quantity());
     }
 
     @Transactional
-    public void delete(Long memberId, WishDeleteRequest wishDeleteRequest) {
-        wishRepository.deleteById(WishId.of(memberId, wishDeleteRequest.productId()));
+    public void delete(Long id) {
+        wishRepository.deleteById(id);
+    }
+
+    @Transactional
+    public void deleteIfExists(Long memberId, Long productId) {
+        wishRepository.findByMemberIdAndProductId(memberId, productId)
+            .ifPresent(wishRepository::delete);
     }
 
     private Pageable createPageableWithProduct(Pageable pageable) {
